--- a/pca10040/s132/arm5_no_packs/ble_app_template_pca10040_s132.uvprojx
+++ b/pca10040/s132/arm5_no_packs/ble_app_template_pca10040_s132.uvprojx
@@ -184,7 +184,6 @@
             <hadXRAM>0</hadXRAM>
             <uocXRam>0</uocXRam>
             <RvdsVP>2</RvdsVP>
-            <RvdsMve>0</RvdsMve>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -3261,6 +3260,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\mi_config.c</FilePath>
             </File>
+            <File>
+              <FileName>crc32.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\common\crc32.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -3335,6 +3339,26 @@
               <FileName>stdio_service_server.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\mijia_profiles\stdio_service_server.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>mijia_ble_libs/gatt_dfu</GroupName>
+          <Files>
+            <File>
+              <FileName>mible_dfu_auth.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\gatt_dfu\mible_dfu_auth.c</FilePath>
+            </File>
+            <File>
+              <FileName>mible_dfu_flash.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\gatt_dfu\mible_dfu_flash.c</FilePath>
+            </File>
+            <File>
+              <FileName>mible_dfu_main.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\gatt_dfu\mible_dfu_main.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -3523,7 +3547,6 @@
             <hadXRAM>0</hadXRAM>
             <uocXRam>0</uocXRam>
             <RvdsVP>2</RvdsVP>
-            <RvdsMve>0</RvdsMve>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -6498,6 +6521,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\mi_config.c</FilePath>
             </File>
+            <File>
+              <FileName>crc32.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\common\crc32.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -6572,6 +6600,26 @@
               <FileName>stdio_service_server.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\mijia_ble_libs\mijia_profiles\stdio_service_server.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>mijia_ble_libs/gatt_dfu</GroupName>
+          <Files>
+            <File>
+              <FileName>mible_dfu_auth.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\gatt_dfu\mible_dfu_auth.c</FilePath>
+            </File>
+            <File>
+              <FileName>mible_dfu_flash.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\gatt_dfu\mible_dfu_flash.c</FilePath>
+            </File>
+            <File>
+              <FileName>mible_dfu_main.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\mijia_ble_libs\gatt_dfu\mible_dfu_main.c</FilePath>
             </File>
           </Files>
         </Group>
